Fix CSS parsing errors - Fix invalid margin-bottom and align-items properties

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -35,7 +35,7 @@
     .recent-searches {
       display: flex;
       flex-direction: column;
-      align-items: left;
+      align-items: flex-start;
       justify-content: center;
 
       li {
